force-app/main/default/objects/genesis__Application_Collateral__c/genesis__Application_Collateral__c.object-meta.xml
<CustomObject>
    <label>Application Collateral</label>
    <nameField>
        <displayFormat>ACD-{00000000}</displayFormat>
        <label>Application Collateral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Collateral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>