force-app/main/default/objects/genesis__Application_Collateral__c/fields/Estimated_Completion_Date_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date_Warning_Check__c</fullName>
    <formula>AND((genesis__Collateral__r.Estimated_Completion_Date__c - genesis__Application__r.CL_Date__c)/365 &gt; 1,  ISBLANK(genesis__Collateral__r.Longer_than_12Month_Completion_Explanati__c))</formula>
    <label>Estimated Completion Date Warning Check</label>
    <type>Checkbox</type>
</CustomField>