force-app/main/default/objects/genesis__Application_Collateral__c/fields/genesis__Active__c.field-meta.xml
<CustomField>
    <fullName>genesis__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to enable or disable the application collateral relation</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>