force-app/main/default/objects/genesis__Application_Collateral__c/fields/genesis__Dealer_Fees__c.field-meta.xml
<CustomField>
    <fullName>genesis__Dealer_Fees__c</fullName>
    <label>Dealer Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>