force-app/main/default/objects/genesis__Application_Collateral__c/fields/genesis__Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Pledge_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pledge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>