force-app/main/default/objects/genesis__Application_Collateral__c/fields/genesis__Total_Dealer_Charges__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Dealer_Charges__c</fullName>
    <label>Total Dealer Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>