force-app/main/default/objects/genesis__Application_Collateral__c/fields/Valued_Date_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Valued_Date_Warning_Check__c</fullName>
    <formula>IF((((genesis__Application__r.genesis__Expected_Start_Date__c - genesis__Collateral__r.clcommon__Value_Date__c)/30) &lt; 6),  IF((((( genesis__Application__r.Primary_Approval_Date_for_Reports__c - genesis__Collateral__r.clcommon__Value_Date__c)/30) &lt; 3)  || (((TODAY()- genesis__Collateral__r.clcommon__Value_Date__c)/30)&lt;3) ) ,true, false) , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valued Date Warning Check</label>
    <type>Checkbox</type>
</CustomField>