force-app/main/default/objects/genesis__Application_Collateral__c/fields/X110_check__c.field-meta.xml
<CustomField>
    <fullName>X110_check__c</fullName>
    <formula>( genesis__Application__r.genesis__Loan_Amount__c /  genesis__Collateral__r.Contract_Price_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>110% check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>