force-app/main/default/objects/genesis__Application_Collateral__c/fields/X110_Render_Check__c.field-meta.xml
<CustomField>
    <fullName>X110_Render_Check__c</fullName>
    <formula>AND(ISPICKVAL(genesis__Collateral__r.Arms_Length_Transaction__c, &apos;No&apos;), ISPICKVAL(genesis__Collateral__r.Favorable_Purchase__c, &apos;Yes&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>110% Render Check</label>
    <type>Checkbox</type>
</CustomField>