force-app/main/default/objects/genesis__Application_Collateral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>genesis__Application__c</columns>
    <columns>genesis__Collateral__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>